--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
       <!-- Education-->
       <section class="resume-section" id="education">
         <div class="resume-section-content">
-          <h2 class="mb-5">Education</h2>
+          <h2 class="mb-5">Educación</h2>
           <div
             class="d-flex flex-column flex-md-row justify-content-between mb-5"
           >
