--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
       <div class="collapse navbar-collapse" id="navbarResponsive">
         <ul class="navbar-nav">
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#about">Acerca de </a>
+            <a class="nav-link js-scroll-trigger" href="#about">Acerca de mi </a>
           </li>
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#experience"
